# falconeye

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  README.md  SPEC.md  falconeye.service  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/abuse/: compose.py  lookup.py  routes.py  send.py  store.py  tools.py
app/breach/: client.py  routes.py  store.py
app/collectors/: ransomware_collect.py
app/image_search/: engines.py  exif.py  routes.py  service.py  upload.py
app/ip_sources/: abuseipdb.py  base.py  censys.py  otx.py  reputation.py  threatfox.py  (+1 more)
config/: action_templates.yaml  asn_abuse_contacts.yaml  asn_operators.yaml  brand_strings.yaml  cluster_tag_priority.yaml  cluster_tag_whitelist.yaml  cpe_inventory.yaml  secrets.env.example
deploy/: install-nginx.sh  install-systemd.sh  install-tls.sh  install-venv.sh
docs/: abuse-reporting.md  fastapi-upgrade-plan.md  ip-reputation-sources.md  ransomware-watch-runbook.md  regressions.md  username-enumeration.md
falconeye/: cluster.py  config.py  db.py  digest.py  stix.py
nginx/: falconeye.conf
scripts/: db_init.py  init_db.py  provision.sh  refresh_username_data.py  run-ingest.sh  run.sh  run_ingest.py
tests/: conftest.py  test_cluster.py  test_config.py  test_db.py  test_digest.py  test_ingest_apnic.py  test_ingest_kev.py  test_ingest_nvd.py  test_ingest_urlhaus.py  test_init_db.py  test_prefix_enrich.py  test_ransomware_collect.py  test_ransomware_search.py  test_shodan_enrich.py  test_sieve.py  test_ssg.py  test_stix.py
(+157 files in other folders)
